Products - done , about us - done

--- a/lang/de.json
+++ b/lang/de.json
@@ -97,6 +97,38 @@
   "menu_ideas": "Menüideen für dich!",
   "sub": "Abonnieren",
   "Menu_title_1":"Menü Kreative Innovationen",
-  "Menu_text_1":"Begib dich auf eine kulinarische Reise mit unserem neuesten Menü, wo raffinierte Aromen und frische Zutaten zusammenkommen, um ein bezauberndes gastronomisches Erlebnis zu schaffen. Unser Koch kreiert jedes Gericht sorgfältig mit den feinsten lokalen und saisonalen Zutaten, um Ihren Gaumen und den Ihrer Gäste zu verwöhnen. Abonnieren Sie unsere Updates und erleben Sie die Bequemlichkeit, unsere frischesten Rezepte täglich zu erhalten, und ersparen Sie sich den Aufwand umfangreicher Küchenplanung."
+  "Menu_text_1":"Begib dich auf eine kulinarische Reise mit unserem neuesten Menü, wo raffinierte Aromen und frische Zutaten zusammenkommen, um ein bezauberndes gastronomisches Erlebnis zu schaffen. Unser Koch kreiert jedes Gericht sorgfältig mit den feinsten lokalen und saisonalen Zutaten, um Ihren Gaumen und den Ihrer Gäste zu verwöhnen. Abonnieren Sie unsere Updates und erleben Sie die Bequemlichkeit, unsere frischesten Rezepte täglich zu erhalten, und ersparen Sie sich den Aufwand umfangreicher Küchenplanung.",
+  "YT_title": "Kreatives Kochen leicht gemacht!",
+  "YT_desc": "Entdecken Sie neue Aromen und übernehmen Sie die Kontrolle in Ihrer eigenen Küche! Erforschen Sie jetzt unsere Rezepte.",
+  "Eco_prod_title":"Erkunden Sie gesunde kulinarische Genüsse bei Ecogourmet",
+  "Eco_prod_text": "Entdecken Sie eine Welt kulinarischer Exzellenz mit der kuratierten Kollektion gesunder Rezepte von Ecogourmet. Genießen Sie einen lebendigen, nachhaltigen Lebensstil durch unser köstliches und umweltfreundliches Angebot.",
+  "platforms_1":"Wir sind auch auf den folgenden Plattformen erreichbar",
+  "prod_nev_1": "Kochbuch für Tollpatsche",
+  "prod_leiras_1": "Auch Tollpatsche können mit einfachen und effektiven Rezepten in diesem Kochbuch problemlos köstliche Fleischgerichte zubereiten.",
+  "prod_kategoria_1": "Fleischgerichte",
+  "prod_nev_2": "Das große Wok-Kochbuch",
+  "prod_leiras_2": "Entdecken Sie die kulinarische Welt des Woks in diesem Kochbuch, das aufregende und schmackhafte Fleischgerichte bietet.",
+  "prod_nev_3": "Wir haben Hunger",
+  "prod_leiras_3": "In diesem Kochbuch finden Sie Rezepte für Fleischgerichte, die sicherlich jeden zufriedenstellen werden.",
+  "prod_nev_4": "Horváth Ilona Kochbuch",
+  "prod_leiras_4": "Horváth Ilonas einzigartiger Geschmack und Wissen kommen in diesem Kochbuch zusammen und teilen die Geheimnisse der Zubereitung besonderer Fleischgerichte.",
+  "prod_nev_5": "Echo Mom in der Küche",
+  "prod_leiras_5": "Echo Moms Kochbuch bietet vegane Rezepte, die gesund, lecker und einfach zuzubereiten sind.",
+  "prod_kategoria_2": "Vegan",
+  "prod_nev_6": "Weltreisender Veganer",
+  "prod_leiras_6": "Das Kochbuch des Weltreisenden Veganers stellt die Aromen verschiedener Küchen aus veganer Sicht vor und ermöglicht es den Lesern, vielfältige Gerichte zuzubereiten.",
+  "prod_nev_7": "Würziger Veganer",
+  "prod_leiras_7": "Das Kochbuch für würzige vegane Gerichte bietet Rezepte, bei denen Gewürze und Würzmittel die eigentlichen Stars der Gerichte sind.",
+  "prod_nev_8": "RozenStein Tibor",
+  "prod_leiras_8": "In Rozen Stein Tibors Fitness-Kochbuch finden Sie gesunde und leckere Rezepte, um Ihren Körper fit zu halten.",
+  "prod_kategoria_3": "Fitness-Gerichte",
+  "prod_nev_9": "Barthmaelous Platinum",
+  "prod_leiras_9": "Das Fitness-Kochbuch von Barthmaelous Platinum bietet kreative und gesunde Gerichte, um Ihnen zu helfen, energiegeladen und fit zu bleiben.",
+  "prod_nev_10": "Gonzo Kochbuch",
+  "prod_leiras_10": "Das Gonzo Kochbuch führt Sie in die Welt des Fitness mit aufregenden und nahrhaften Rezepten ein.",
+  "prod_nev_11": "Histaminintoleranz",
+  "prod_leiras_11": "Das Kochbuch zur Histaminintoleranz bietet Rezepte, um denen mit Histaminintoleranz bei der Auswahl ihrer Ernährung zu helfen.",
+  "prod_nev_12": "Lebensmittelschule",
+  "prod_leiras_12": "Das vegane Kochbuch der Lebensmittelschule bereichert Ihre Ernährung mit verschiedenen veganen Rezepten, perfekt für jede Mahlzeit."
 
 }
