--- a/lang/en.json
+++ b/lang/en.json
@@ -98,6 +98,38 @@
   "testimonial_title": "What They Say About Us...",
   "menu_ideas": "Menu Ideas for You!",
   "sub": "Subscribe",
-  "Menu_title_1":"Menu Creative Innovations",
-  "Menu_text_1":"Embark on a culinary journey with our latest menu, where sophisticated flavors and fresh ingredients converge to create an enchanting gastronomic experience. Our chef meticulously crafts each dish using the finest local and seasonal ingredients to delight your palate and that of your guests. Subscribe to our updates and experience the convenience of receiving our freshest recipes daily, saving you from the hassle of extensive kitchen planning."
-}
+  "Menu_title_1":"Menu with Creative Innovations",
+  "Menu_text_1":"Embark on a culinary journey with our latest menu, where sophisticated flavors and fresh ingredients converge to create an enchanting gastronomic experience. Our chef meticulously crafts each dish using the finest local and seasonal ingredients to delight your palate and that of your guests. Subscribe to our updates and experience the convenience of receiving our freshest recipes daily, saving you from the hassle of extensive kitchen planning.",
+  "YT_title": "Creative Cooking Made Easy!",
+  "YT_desc": "Discover new flavors and take control in your own kitchen! Explore our recipes now.",
+  "Eco_prod_title":"Explore Healthy Culinary Delights at Ecogourmet",
+  "Eco_prod_text": "Discover a world of culinary excellence with Ecogourmet's curated collection of healthy recipes. Embrace a vibrant, sustainable lifestyle through our delectable, eco-friendly offerings.",
+  "platforms_1":"We are available on the following platforms",
+  "prod_nev_1": "Cookbook for the Clumsy",
+  "prod_leiras_1": "Even the clumsy can easily prepare delicious meat dishes with simple and effective recipes in this cookbook.",
+  "prod_kategoria_1": "Meat Dishes",
+  "prod_nev_2": "The Great Wok Cookbook",
+  "prod_leiras_2": "Discover the culinary world of wok in this cookbook, offering exciting and tasty meat dishes.",
+  "prod_nev_3": "We Are Hungry",
+  "prod_leiras_3": "In this cookbook, you will find recipes for meat dishes that will surely satisfy everyone.",
+  "prod_nev_4": "Horváth Ilona Cookbook",
+  "prod_leiras_4": "Horváth Ilona's unique taste and knowledge come together in this cookbook, sharing the secrets of preparing special meat dishes.",
+  "prod_nev_5": "Echo Mom in the Kitchen",
+  "prod_leiras_5": "Echo Mom's cookbook offers vegan recipes that are healthy, tasty, and easy to prepare.",
+  "prod_kategoria_2": "Vegan",
+  "prod_nev_6": "World Traveler Vegan",
+  "prod_leiras_6": "The World Traveler Vegan cookbook introduces the flavors of different cuisines from a vegan perspective, allowing readers to create diverse dishes.",
+  "prod_nev_7": "Spicy Vegan",
+  "prod_leiras_7": "The Spicy Vegan cookbook offers recipes where spices and seasonings are the real stars of the dishes.",
+  "prod_nev_8": "RozenStein Tibor",
+  "prod_leiras_8": "In Rozen Stein Tibor's fitness cookbook, you will find healthy and delicious recipes to help you maintain a fit body.",
+  "prod_kategoria_3": "Fitness Dishes",
+  "prod_nev_9": "Barthmaelous Platinum",
+  "prod_leiras_9": "Barthmaelous Platinum's fitness cookbook provides creative and healthy dishes to help you stay energetic and fit.",
+  "prod_nev_10": "Gonzo Cookbook",
+  "prod_leiras_10": "The Gonzo Cookbook introduces you to the world of fitness with exciting and nutritious recipes.",
+  "prod_nev_11": "Histamine Intolerance",
+  "prod_leiras_11": "The Histamine Intolerance cookbook offers recipes to help those with histamine intolerance navigate their dietary choices.",
+  "prod_nev_12": "Food School",
+  "prod_leiras_12": "The Food School vegan cookbook enriches your diet with various vegan recipes, perfect for every meal."  
+  }
