--- a/lang/hu.json
+++ b/lang/hu.json
@@ -99,6 +99,39 @@
   "menu_ideas": "Menü ötletek nektek!",
   "sub": "Feliratkozás",
   "Menu_title_1":"Menü Kreatív Újdonságokkal",
-  "Menu_text_1":"Indulj el egy gasztronómiai utazáson éttermünk legújabb, kifinomult ízekkel és friss alapanyagokkal gazdagított menüjével. Séfünk lelkiismeretes munkával készíti el minden fogást, a legfinomabb helyi és szezonális alapanyagok felhasználásával, hogy elvarázsolja az Ön és vendégei ízlelőbimbóit. Iratkozz fel frissítéseinkre, és élvezd a friss receptek mindennapos kényelmét, miközben megspórolod a konyhai tervezés terhét."
+  "Menu_text_1":"Indulj el egy gasztronómiai utazáson éttermünk legújabb, kifinomult ízekkel és friss alapanyagokkal gazdagított menüjével. Séfünk lelkiismeretes munkával készíti el minden fogást, a legfinomabb helyi és szezonális alapanyagok felhasználásával, hogy elvarázsolja az Ön és vendégei ízlelőbimbóit. Iratkozz fel frissítéseinkre, és élvezd a friss receptek mindennapos kényelmét, miközben megspórolod a konyhai tervezés terhét.",
+  "YT_title": "Kreatív Ételek Egyszerűen!",
+  "YT_desc": "Fedezze fel új ízeket és vegye át az irányítást a saját konyhájában! Ismerje meg receptjeinket most!",
+  "Eco_prod_title": "Fedezze fel az Egészséges Gasztronómia Különlegességeit az Ecogourmetnél",
+  "Eco_prod_text":  "Ismerje meg az Ecogourmet kiválasztott, egészséges receptjeinek világát. Fogadja el a vibráló, fenntartható életstílust ízletes és környezetbarát kínálatunkon keresztül.",
+  "platforms_1":"Bizonyára az Ön számára is kényelmes az elérhetőség különböző platformokon",
+  "prod_nev_1" : "Szakácskönyv Kétbalkezes",
+  "prod_leiras_1" : "Kétbalkezesek is könnyedén elkészíthetik a finom húsételeket ebben a szakácskönyvben található egyszerű és hatékony receptekkel.",
+  "prod_kategoria_1" : "Hus ételek",
+  "prod_nev_2" : "A nagy Wok szakácskönyv",
+  "prod_leiras_2" : "Fedezd fel a wok kulináris világát ebben a szakácskönyvben, amely izgalmas és ízletes húsételeket kínál.",
+  "prod_nev_3" : "Éhesek Vagyunk",
+  "prod_leiras_3" : "Ebben a szakácskönyvben olyan húsételek receptjeit találod, amelyek garantáltan jóllakottá tesznek mindenkit.",
+  "prod_nev_4" : "Horváth Ilona szakácskönyv",
+  "prod_leiras_4" : "Horváth Ilona különleges ízlésének és tudásának ötvözete ebben a szakácskönyvben, amelyben különleges húsételek készítésének fortélyait osztja meg.",
+  "prod_nev_5" : "Echo anyu a konyhába",
+  "prod_leiras_5" : "Az Echo anyu szakácskönyv olyan vegán recepteket kínál, amelyek egészségesek és ízletesek, ráadásul könnyen elkészíthetők.",
+  "prod_kategoria_2" : "Vegán",
+  "prod_nev_6" : "Világjáró vegán",
+  "prod_leiras_6" : "Világjáró vegán szakácskönyve különböző konyhák ízeit mutatja be vegán szemszögből, így az olvasók változatos fogásokat alkothatnak.",
+  "prod_nev_7" : "Fűszeres",
+  "prod_leiras_7" : "A Fűszeres vegán szakácskönyv olyan recepteket kínál, amelyekben a fűszerek és ízesítők az ételek igazi csillagai.",
+  "prod_nev_8" : "RozenStein Tibor",
+  "prod_leiras_8" : "Rozen Stein Tibor fitness szakácskönyvében egészséges és ízletes recepteket találsz, amelyek segítenek a tested formában tartásában.",
+  "prod_kategoria_3" : "Fitness ételek",
+  "prod_nev_9" : "Barthmaelous Platina",
+  "prod_leiras_9" : "A Barthmaelous Platina fitness szakácskönyv kreatív és egészséges ételekkel segít abban, hogy energikus és fittek maradjunk.",
+  "prod_nev_10" : "Gonzó Szakácskönyv",
+  "prod_leiras_10" : "A Gonzó Szakácskönyv a fitnesz világába vezet be, izgalmas és tápláló ételek receptjeivel.",
+  "prod_nev_11" : "Hisztamin intolerancia",
+  "prod_leiras_11" : "A Hisztamin intolerancia szakácskönyv olyan recepteket kínál, amelyek segítenek a hisztamin intoleranciával élőknek az étkezésben.",
+  "prod_nev_12" : "Étel iskolája",
+  "prod_leiras_12" : "Az Étel iskolája vegán szakácskönyve különböző vegán receptekkel gazdagítja az étrendedet, kiválóan alkalmazható minden étkezésnél."
+  
 
 }
