--- a/lang/de.json
+++ b/lang/de.json
@@ -129,6 +129,35 @@
   "prod_nev_11": "Histaminintoleranz",
   "prod_leiras_11": "Das Kochbuch zur Histaminintoleranz bietet Rezepte, um denen mit Histaminintoleranz bei der Auswahl ihrer Ernährung zu helfen.",
   "prod_nev_12": "Lebensmittelschule",
-  "prod_leiras_12": "Das vegane Kochbuch der Lebensmittelschule bereichert Ihre Ernährung mit verschiedenen veganen Rezepten, perfekt für jede Mahlzeit."
-
+  "prod_leiras_12": "Das vegane Kochbuch der Lebensmittelschule bereichert Ihre Ernährung mit verschiedenen veganen Rezepten, perfekt für jede Mahlzeit.",
+  "recipe_nev_1" : "Rührei",
+  "recipe_leiras_1" : "Rührei aus frischen Eiern zubereitet.",
+  "recipe_nev_2" : "Haferbrei mit Früchten",
+  "recipe_leiras_2" : "Gesunder Haferbrei mit frischem Obst.",
+  "recipe_nev_3" : "Griechischer Joghurt mit Früchten",
+  "recipe_leiras_3" : "Frischer griechischer Joghurt mit frischem Obst.",
+  "recipe_kategoria_1" : "Frühstück",
+  "recipe_nev_4" : "Gegrilltes Hähnchen mit Gemüse",
+  "recipe_leiras_4" : "Gegrilltes Hähnchen mit frischem Gemüse.",
+  "recipe_kategoria_2" : "Mittagessen",
+  "recipe_nev_5" : "Linsensuppe",
+  "recipe_leiras_5" : "Linsensuppe mit reichen Aromen.",
+  "recipe_nev_6" : "Gebackener Lachs mit Salat",
+  "recipe_leiras_6" : "Gebackener Lachs mit frischem Salat.",
+  "recipe_nev_7" : "Spinat-Ricotta-Cannelloni",
+  "recipe_leiras_7" : "Cannelloni gefüllt mit Spinat-Ricotta.",
+  "recipe_kategoria_3" : "Abendessen",
+  "recipe_nev_8" : "Eggplant Parmigiana",
+  "recipe_leiras_8" : "Auberginenscheiben mit Parmesan und Tomatensauce.",
+  "recipe_nev_9" : "Rindfleisch-Eintopf mit Nudeln",
+  "recipe_leiras_9" : "Traditioneller Rindfleisch-Eintopf mit Nudeln.",
+  "recipe_elkeszites_1" : "1. Schlage 2 Eier in eine Schüssel. 2. Schlage die Eier auf. 3. Würze nach Geschmack mit Salz und Pfeffer. 4. Koche die Eier in einer Pfanne.",
+  "recipe_elkeszites_2" : "1. Koche den Haferbrei in Wasser. 2. Füge frisches Obst hinzu. 3. Vermische und serviere.",
+  "recipe_elkeszites_3" : "1. Gib griechischen Joghurt in eine Schüssel. 2. Füge deine Auswahl an Früchten hinzu. 3. Vermische und genieße.",
+  "recipe_elkeszites_4" : "1. Würze das Hähnchenbrustfilet. 2. Koche das Hähnchenbrustfilet in einer Pfanne. 3. Bereite frisches Gemüse vor.",
+  "recipe_elkeszites_5" : "1. Koche die Linsen. 2. Bereite eine Gemüsesuppe zu. 3. Vermische die Linsen mit der Suppe.",
+  "recipe_elkeszites_6" : "1. Backe den Lachs. 2. Bereite einen frischen Salat vor. 3. Serviere den gebackenen Lachs mit dem Salat.",
+  "recipe_elkeszites_7" : "1. Bereite die Ricotta-Füllung vor. 2. Fülle die Cannelloni mit der Füllung. 3. Backe und serviere.",
+  "recipe_elkeszites_8" : "1. Schneide die Aubergine in Scheiben. 2. Bereite Tomatensauce vor. 3. Schichte die Aubergine und die Sauce und backe sie dann.",
+  "recipe_elkeszites_9" : "1. Bereite den Rindfleischeintopf vor. 2. Koche die Nudeln. 3. Serviere sie zusammen und genieße."
 }
