--- a/lang/en.json
+++ b/lang/en.json
@@ -131,5 +131,35 @@
   "prod_nev_11": "Histamine Intolerance",
   "prod_leiras_11": "The Histamine Intolerance cookbook offers recipes to help those with histamine intolerance navigate their dietary choices.",
   "prod_nev_12": "Food School",
-  "prod_leiras_12": "The Food School vegan cookbook enriches your diet with various vegan recipes, perfect for every meal."  
+  "prod_leiras_12": "The Food School vegan cookbook enriches your diet with various vegan recipes, perfect for every meal.",
+  "recipe_nev_1" : "Scrambled Eggs",
+  "recipe_leiras_1" : "Scrambled eggs made from fresh eggs.",
+  "recipe_nev_2" : "Oatmeal with Fruits",
+  "recipe_leiras_2" : "Healthy oatmeal with fresh fruits.",
+  "recipe_nev_3" : "Greek Yogurt with Fruits",
+  "recipe_leiras_3" : "Fresh Greek yogurt with fresh fruits.",
+  "recipe_kategoria_1" : "Breakfast",
+  "recipe_nev_4" : "Grilled Chicken with Vegetables",
+  "recipe_leiras_4" : "Grilled chicken with fresh vegetables.",
+  "recipe_kategoria_2" : "Lunch",
+  "recipe_nev_5" : "Lentil Soup",
+  "recipe_leiras_5" : "Lentil soup with rich flavors.",
+  "recipe_nev_6" : "Baked Salmon with Salad",
+  "recipe_leiras_6" : "Baked salmon with fresh salad.",
+  "recipe_nev_7" : "Spinach Ricotta Cannelloni",
+  "recipe_leiras_7" : "Cannelloni filled with spinach ricotta.",
+  "recipe_kategoria_3" : "Dinner",
+  "recipe_nev_8" : "Eggplant Parmigiana",
+  "recipe_leiras_8" : "Eggplant slices with Parmesan and tomato sauce.",
+  "recipe_nev_9" : "Beef Stew with Noodles",
+  "recipe_leiras_9" : "Traditional beef stew with noodles.",
+  "recipe_elkeszites_1" : "1. Crack 2 eggs into a bowl. 2. Beat the eggs. 3. Season with salt and pepper to taste. 4. Cook the eggs in a skillet.",
+  "recipe_elkeszites_2" : "1. Cook the oatmeal in water. 2. Add fresh fruits. 3. Mix and serve.",
+  "recipe_elkeszites_3" : "1. Place Greek yogurt in a bowl. 2. Add your choice of fruits. 3. Mix and enjoy.",
+  "recipe_elkeszites_4" : "1. Season the chicken breast. 2. Cook the chicken breast in a skillet. 3. Prepare fresh vegetables.",
+  "recipe_elkeszites_5" : "1. Cook the lentils. 2. Prepare vegetable soup. 3. Mix the lentils with the soup.",
+  "recipe_elkeszites_6" : "1. Bake the salmon. 2. Prepare a fresh salad. 3. Serve the baked salmon with the salad.",
+  "recipe_elkeszites_7" : "1. Prepare the ricotta filling. 2. Fill the cannelloni with the filling. 3. Bake and serve.",
+  "recipe_elkeszites_8" : "1. Slice the eggplant. 2. Prepare tomato sauce. 3. Layer the eggplant and sauce, then bake.",
+  "recipe_elkeszites_9" : "1. Prepare the beef stew. 2. Cook the noodles. 3. Serve them together and enjoy."
   }
