--- a/lang/hu.json
+++ b/lang/hu.json
@@ -131,7 +131,36 @@
   "prod_nev_11" : "Hisztamin intolerancia",
   "prod_leiras_11" : "A Hisztamin intolerancia szakácskönyv olyan recepteket kínál, amelyek segítenek a hisztamin intoleranciával élőknek az étkezésben.",
   "prod_nev_12" : "Étel iskolája",
-  "prod_leiras_12" : "Az Étel iskolája vegán szakácskönyve különböző vegán receptekkel gazdagítja az étrendedet, kiválóan alkalmazható minden étkezésnél."
-  
+  "prod_leiras_12" : "Az Étel iskolája vegán szakácskönyve különböző vegán receptekkel gazdagítja az étrendedet, kiválóan alkalmazható minden étkezésnél.",
+  "recipe_nev_1" : "Tojásrántotta",
+  "recipe_leiras_1" : "Friss tojásokból készült rántotta.",
+  "recipe_nev_2" : "Zabkása gyümölcsökkel",
+  "recipe_leiras_2" : "Egészséges zabkása friss gyümölcsökkel.",
+  "recipe_nev_3" : "Görög joghurt gyümölcsökkel",
+  "recipe_leiras_3" : "Friss görög joghurt friss gyümölcsökkel.",
+  "recipe_kategoria_1" : "Reggeli",
+  "recipe_nev_4" : "Csirkemell sült zöldségekkel",
+  "recipe_leiras_4" : "Grillezett csirkemell friss zöldségekkel.",
+  "recipe_kategoria_2" : "Ebéd",
+  "recipe_nev_5" : "Lencseleves",
+  "recipe_leiras_5" : "Lencseleves gazdag ízekkel.",
+  "recipe_nev_6" : "Sült lazac salátával",
+  "recipe_leiras_6" : "Sült lazac friss salátával.",
+  "recipe_nev_7" : "Spenótos ricotta cannelloni",
+  "recipe_leiras_7" : "Spenótos ricotta töltelékkel készült cannelloni.",
+  "recipe_kategoria_3" : "Vacsora",
+  "recipe_nev_8" : "Padlizsán Parmigiana",
+  "recipe_leiras_8" : "Padlizsán szeletek parmezán és paradicsom szósszal.",
+  "recipe_nev_9" : "Marhapörkölt nokedlivel",
+  "recipe_leiras_9" : "Hagyományos marhapörkölt nokedlivel.",
+  "recipe_elkeszites_1" : "1. Üss fel 2 tojást egy tálba. 2. Verd fel a tojásokat. 3. Sózd és borsozd meg ízlés szerint. 4. Süsd meg a tojásokat egy serpenyőben.",
+  "recipe_elkeszites_2" : "1. Főzd meg a zabpelyhet vízben. 2. Adjon hozzá friss gyümölcsöket. 3. Keverje össze és tálalja.",
+  "recipe_elkeszites_3" : "1. Tegyen görög joghurtot egy tálba. 2. Adjon hozzá választott gyümölcsöket. 3. Keverje össze és élvezze.",
+  "recipe_elkeszites_4" : "1. Fűszerezze meg a csirkemellet. 2. Süssük meg a csirkemellet serpenyőben. 3. Készítse el a friss zöldségeket.",
+  "recipe_elkeszites_5" : "1. Főzzük meg a lencsét. 2. Készítsük el a zöldséglevest. 3. Keverjük össze a lencsét és a levest.",
+  "recipe_elkeszites_6" : "1. Süssük meg a lazacot. 2. Készítsünk friss salátát. 3. Tálaljuk a sült lazaccal a salátát.",
+  "recipe_elkeszites_7" : "1. Készítsük el a ricotta tölteléket. 2. Töltse meg a cannellonit a töltelékkel. 3. Süsse meg és tálalja.",
+  "recipe_elkeszites_8" : "1. Szeletelje fel a padlizsánt. 2. Készítsen paradicsom szósszal. 3. Rétegezze a padlizsánt és a szószt, majd süssük meg.",
+  "recipe_elkeszites_9" : "1. Készítse el a marhapörköltet. 2. Főzzük meg a nokedlit. 3. Tálaljuk együtt és élvezze."
 
 }
