--- a/lang/hu.json
+++ b/lang/hu.json
@@ -153,7 +153,7 @@
   "recipe_leiras_8" : "Padlizsán szeletek parmezán és paradicsom szósszal.",
   "recipe_nev_9" : "Marhapörkölt nokedlivel",
   "recipe_leiras_9" : "Hagyományos marhapörkölt nokedlivel.",
-  "recipe_elkeszites_1" : "1. Üss fel 2 tojást egy tálba. 2. Verd fel a tojásokat. 3. Sózd és borsozd meg ízlés szerint. 4. Süsd meg a tojásokat egy serpenyőben.",
+  "recipe_elkeszites_1" : "1. Üss fel 2 tojást egy tálba. \n2. Verd fel a tojásokat. \n3. Sózd és borsozd meg ízlés szerint. \n4. Süsd meg a tojásokat egy serpenyőben.",
   "recipe_elkeszites_2" : "1. Főzd meg a zabpelyhet vízben. 2. Adjon hozzá friss gyümölcsöket. 3. Keverje össze és tálalja.",
   "recipe_elkeszites_3" : "1. Tegyen görög joghurtot egy tálba. 2. Adjon hozzá választott gyümölcsöket. 3. Keverje össze és élvezze.",
   "recipe_elkeszites_4" : "1. Fűszerezze meg a csirkemellet. 2. Süssük meg a csirkemellet serpenyőben. 3. Készítse el a friss zöldségeket.",
