--- a/lang/hu.json
+++ b/lang/hu.json
@@ -55,7 +55,7 @@
   "slide_content_3": "Az EcoGourmet olyan éttermi élményeket kínál, ahol az ételek nemcsak finomak, hanem fenntarthatóak is. Támogasd egészségedet és a környezetvédelmet az EcoGourmet segítségével.",
   "slide_title_4": "Nem kell tovább a konyhában gondolkodnia!",
   "slide_content_4": "Az EcoGourmet egészséges menükkel rukkol elő, hogy segítsen megkönnyíteni az étkezési döntéseit. Egyszerűen válasszon akár napi 3 menü közül!",
-  "services":"Szolgáltatások",
+  "services":"Receptek",
   "shop_card_1":" Az Ecogourmet a fenntartható és környezetbarát élelmiszerek széles választékát kínálja. Minden termékünk környezetbarát csomagolásban érkezik, és hozzájárul a fenntartható életmód támogatásához.",
   "shop_card_2":"Az Ecogourmet elkötelezett a vásárlói elégedettség iránt, és gyors, megbízható kiszállítást biztosít. Rendeléseiket gyorsan és precízen szállítjuk ki, hogy az ügyfeleink minél hamarabb élvezhessék a friss és minőségi termékeket.",
   "shop_card_3":"Az Ecogourmet rendszeresen kínál exkluzív akciókat és kedvezményeket vásárlóinknak. Az ügyfeleink számára elérhető rendszeres promóciók segítenek abban, hogy még vonzóbbá tegyük a vásárlást, és előnyösebbé tegyük az Ecogourmet melletti döntést.",
@@ -98,6 +98,7 @@
   "testimonial_title": "Mit mondanak rólunk...",
   "menu_ideas": "Menü ötletek nektek!",
   "sub": "Feliratkozás",
+  "products":"Áruház",
   "Menu_title_1":"Menü Kreatív Újdonságokkal",
   "Menu_text_1":"Indulj el egy gasztronómiai utazáson éttermünk legújabb, kifinomult ízekkel és friss alapanyagokkal gazdagított menüjével. Séfünk lelkiismeretes munkával készíti el minden fogást, a legfinomabb helyi és szezonális alapanyagok felhasználásával, hogy elvarázsolja az Ön és vendégei ízlelőbimbóit. Iratkozz fel frissítéseinkre, és élvezd a friss receptek mindennapos kényelmét, miközben megspórolod a konyhai tervezés terhét.",
   "YT_title": "Kreatív Ételek Egyszerűen!",
